--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 <h4>Avec sa courte description</h4>
             </div>
             <div id="bouton-more">
-            <a class="bouton decouvrir-1" href="#">Découvrir</a>
-            <a class="bouton decouvrir-2" href="#">En savoir +</a>
+                <a class="bouton primaire" href="#">Découvrir</a>
+                <a class="bouton secondaire" href="#">En savoir plus</a>
             </div>
         </header>
     </section>
