--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:ital,wght@0,200..800;1,200..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
     <nav id="navigation">
@@ -50,7 +50,7 @@
                         <h3 class="prix">120€</h3>
                     </div>
                     <p class="description">
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae corporis voluptatem libero recusandae ipsum. Molestiae consequuntur soluta id dolor quisquam facilis tempora, sapiente ea necessitatibus dicta voluptatem cum, unde similique?
+                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae corporis voluptatem libero recusandae ipsum.
                     </p>
                     <a class="bouton ajout-panier" href="">Ajouter au panier</a>
                 </div>
@@ -63,7 +63,7 @@
                             <h3 class="prix">110€</h3>
                         </div>
                         <p class="description">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae corporis voluptatem libero recusandae ipsum. Molestiae consequuntur soluta id dolor quisquam facilis tempora, sapiente ea necessitatibus dicta voluptatem cum, unde similique?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae corporis voluptatem libero recusandae ipsum.
                         </p>
                         <a class="bouton ajout-panier" href="">Ajouter au panier</a>
                     </div>
@@ -76,7 +76,7 @@
                             <h3 class="prix">100€</h3>
                         </div>
                         <p class="description">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae corporis voluptatem libero recusandae ipsum. Molestiae consequuntur soluta id dolor quisquam facilis tempora, sapiente ea necessitatibus dicta voluptatem cum, unde similique?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae corporis voluptatem libero recusandae ipsum.
                         </p>
                         <a class="bouton ajout-panier" href="">Ajouter au panier</a>
                     </div>
@@ -89,7 +89,7 @@
                             <h3 class="prix">90€</h3>
                         </div>
                         <p class="description">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae corporis voluptatem libero recusandae ipsum. Molestiae consequuntur soluta id dolor quisquam facilis tempora, sapiente ea necessitatibus dicta voluptatem cum, unde similique?
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Vitae corporis voluptatem libero recusandae ipsum.
                         </p>
                         <a class="bouton ajout-panier" href="">Ajouter au panier</a>
                     </div>
@@ -99,7 +99,7 @@
     </section>
 
     <footer>
-        <p id="footer">©Koolkics 2023</p>
+        <p id="footer">par @r.maklo - 2025</p>
     </footer>
 </body>
 </html>
