--- a/index.html
+++ b/index.html
@@ -22,18 +22,21 @@
         <div id="user">
             <a class="bouton panier" href="#">Mon panier</a>
             <a href="#"><img id="pp" src="avatar.jpg" alt="Photo utilisateur"></a>
-        </div> 
+        </div>
     </nav>
-    <section id="affiche">
+    <!--<div class="shadow"></div>-->
+    <section id="header">
         <header>
-        <img src="photo-header.png" alt="Photo chaussure">
-            <div id="texte-header">
-                <h1>Un hero header</h1>
-                <h4>Avec sa courte description</h4>
-            </div>
-            <div id="bouton-more">
-                <a class="bouton primaire" href="#">Découvrir</a>
-                <a class="bouton secondaire" href="#">En savoir plus</a>
+        <img src="header-photo.jpg" alt="Photo chaussure">
+            <div id="texte-bouton">
+                <div id="texte-header">
+                    <h1>Un hero header</h1>
+                    <h4>Avec sa courte description</h4>
+                </div>
+                <div id="bouton-more">
+                    <a class="bouton primaire" href="#">Découvrir</a>
+                    <a class="bouton secondaire" href="#">En savoir plus</a>
+                </div>
             </div>
         </header>
     </section>
